--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-5/int08-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-5/int08-5.component.html
@@ -36,7 +36,7 @@
       <div class="ui center aligned grid">
         <div class="eight wide column">
           <button class="ui mini primary button" type="button" (click)="clickSearch()">
-            <i class="search icon"></i>วิเคราะห์ข้อมูลเบื้องต้น</button>
+            <i class="search icon"></i>ค้นหา</button>
         </div>
       </div>
       <br>
